# Super-Mario-Bros.---Python-

./: .replit  main.py  pyproject.toml  requirements.txt
WorldData/MarioSpriteSheetWork/Small/: info.txt
WorldData/PSDS/: DectBlocks.psd  SMB-Blocks.psd  W1-1.psd
launchers/windows/: playgame.bat
